--- a/src/components/NFTs/nft.css
+++ b/src/components/NFTs/nft.css
@@ -65,3 +65,16 @@
     object-fit: cover;
     margin-top: 10px;
 }
+
+
+@media screen and (max-width: 1085px)  {
+    .nftItems{
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 600px)  {
+    .nftItems{
+        width: 100%;
+    }
+}
