--- a/src/components/Community/community.css
+++ b/src/components/Community/community.css
@@ -25,11 +25,9 @@
     margin-top: 30px;
     background: #fff;
     color: #A02279;
-}
-
-.comBtn:hover{
-    background: #fff;
-    color: #A02279;
+    padding: 9px;
+    border: none;
+    border-radius: 7px;
 }
 
 
