--- a/src/pages/NftPlace/nftplace.css
+++ b/src/pages/NftPlace/nftplace.css
@@ -2,14 +2,23 @@
     margin: 70px 0px;
 }
 
+@media(max-width: 768px){
+    .location{
+        margin: 40px 0px;
+    }
+}
+
 .locationList{
+    margin: 0;
     list-style: none;
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 .locationListItem{
+    display: flex;
+    justify-content: space-evenly;
     font-weight: 400;
     font-size: 20px;
     line-height: 25px;
@@ -17,9 +26,50 @@
     cursor: pointer;
 }
 
+.locationMobile{
+    margin: 30px 0px;
+}
+
+.locationListMobile{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    display: flex;
+}
+
+.locationListItemMobile{
+    width: 50%;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 25px;
+    color: #434343;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.locationListItemMobile:hover{
+    text-decoration: underline;
+}
+
 .btnLocation{
+    width: auto;
     background: linear-gradient(124.4deg, #FFFFFF 10.8%, #FFFFFF 87.34%);
     border: 1px solid #B4B4B4;
     border-radius: 8px;
     padding: 10px;
+    margin: 0;
+}
+
+@media(max-width: 768px){
+    .locationListItem{
+        display: none;
+    }
+}
+@media(max-width: 768px){
+    .btnLocation{
+        display: flex;
+        justify-content: center;
+    }
 }
